--- a/form/style.css
+++ b/form/style.css
@@ -1,22 +1,55 @@
 * {
-  font-family: Helvetica, Arial, sans-serif;
-  align-content: center;
+  box-sizing: border-box;
 }
 
 body {
-  background-color: lightblue;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 15px 30px;
+  font-size: 17px;
+  padding: 8px;
 }
 
-h1 {
-  color: rgb(255, 255, 255);
+.container {
+  background-color: #f2f2f2;
+  padding: 5px, 20px, 15px, 20px;
+  border: 1 px, solid lightgray;
+  border-radius: 4px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="number"],
+input[type="password"],
+input[type="date"],
+select,
+textarea {
+  width: 100%;
+  padding: 15px;
+  border: 1px, solid white;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+fieldset {
+  background-color: antiquewhite;
+  border: 1px solid #ccc;
+}
+
+.MainHeading {
   text-align: center;
 }
 
-p {
-  font-family: verdana;
-  font-size: 20px;
+input[type="submit"] {
+  background-color: #4daea1;
+  color: white;
+  padding: 12px, 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+  height: 50px;
 }
 
-a {
-  text-decoration: none;
+input[type="submit"]:hover {
+  background-color: #4caf4c;
 }
